end of day at foxconn

--- a/templates/index.html
+++ b/templates/index.html
@@ -159,6 +159,12 @@
             font-size: 0.6em; /* Smaller font size */
         }
     </style>
+
+    <style>
+        .datepicker {
+            z-index: 9999 !important;
+        }
+    </style>
     
 
 </head>
