First functional logs template

--- a/templates/index.html
+++ b/templates/index.html
@@ -165,6 +165,12 @@
             z-index: 9999 !important;
         }
     </style>
+        <style>
+            /* Mostly for the logs template, to show host_status file contents */
+            .host-status {
+                white-space: pre-wrap; /* This ensures that the text wraps and preserves newlines */
+            }
+        </style>
     
 
 </head>
