--- a/templates/home.html
+++ b/templates/home.html
@@ -97,7 +97,7 @@
                     <td>{{ unit.country }}</td>
                     <td class="raw-failure-column">
                         <span class="cell-content">{{ unit.raw_failure }}</span></td>
-                    <td>{{ unit.test_result }}</td>
+                    <td class="result-cell" rescell_sn="{{ unit.serial_number }}">{{ unit.test_result }} <img class="result-icon" src="static/alert-circle.svg" alt="Alert Icon" width="15" height="15"></td>
                 </tr>
                 {% endfor %}
             {% else %}
@@ -230,6 +230,57 @@
 </div>
 
 
+<!-- Host File Modal -->
+<div class="modal fade" id="hostFileModal" tabindex="-1" role="dialog" aria-labelledby="hostFileModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="hostFileModalLabel">Host Files</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <table class="table table-striped table-hover table-bordered" id="LOGSModalTable">
+                    <thead>
+                        <tr>
+                            <th scope="col">Count</th>
+                            <th scope="col">File Name</th>
+                        </tr>
+                    </thead>
+                    <tbody id="hostFileModalTableBody">
+                       
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary text-nowrap" data-dismiss="modal">Dismiss</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="modal fade" id="hostStatusModal" tabindex="-1" role="dialog" aria-labelledby="hostStatusModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl custom-modal-height" role="document">
+        <div class="modal-content custom-modal-background">
+            <div class="modal-header">
+                <h5 class="modal-title" id="hostStatusModalLabel"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <textarea id="hostStatusContent" readonly style="width: 100%; height: 100%; box-sizing: border-box;"></textarea>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Dismiss</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
 
 
@@ -352,7 +403,7 @@ function setMode(mode) {
                                     <td>${record.datecode}</td>
                                     <td>${record.country}</td>
                                     <td class="raw-failure-column"><span class="cell-content">${record.raw_failure}</span></td>
-                                    <td>${record.test_result}</td>
+                                    <td class="result-cell" rescell_sn="${record.serial_number}">${record.test_result} <img class="result-icon" src="static/alert-circle.svg" alt="Alert Icon" width="15" height="15"></td>
                                 </tr>
                             `);
                             toggleRawFailureColumn('');
@@ -497,7 +548,7 @@ function setMode(mode) {
                                         '<td>' + result.datecode + '</td>' +
                                         '<td>' + result.country + '</td>' +
                                         '<td class="raw-failure-column"><span class="cell-content">' + result.raw_failure + '</span></td>' +
-                                        '<td>' + result.test_result + '</td>' +
+                                        '<td class="result-cell" rescell_sn="'+result.serial_number+'">' + result.test_result + ' <img class="result-icon" src="static/alert-circle.svg" alt="Alert Icon" width="15" height="15"></td>' +
                                         '</tr>';
                                     $('#home_results_table tbody').append(row);
                                 } else 
@@ -589,23 +640,46 @@ function setMode(mode) {
             $('#editModal').modal('show');
         });
 
-        //Handle click on table rows
-        $('#home_results_table tbody').on('click', 'tr', function() {
-            let comp_snpn = $(this).attr('comp_snpn') + '\r';
+    
+        // Handle click on table cells
+    $('#home_results_table tbody').on('click', 'td', function() {
+        // Get the index of the clicked cell
+        let cellIndex = $(this).index();
+        // Get the header text to identify the column
+        let headerText = $('#home_results_table thead th').eq(cellIndex).text().trim().toLowerCase();
+        console.log("working with headerText:"+headerText);
+            // Check if the clicked cell is in one of the specified columns
+            if (headerText === 'serial number' || headerText === 'datecode' || headerText === 'raw failure') {
+            let cellContent = $(this).text().trim();
 
+            if (cellContent) {
+                var tempInput = $('<input>');
+                $('body').append(tempInput);
+                tempInput.val(cellContent).select();
+                document.execCommand('copy');
+                tempInput.remove();
+                console.log(`Copied content: ${cellContent}`);
+            } else {
+                console.log('No content found in the cell.');
+            }
+        } else if (headerText === 'part number') {
+            // Get the comp_snpn attribute of the row
+            let comp_snpn = $(this).closest('tr').attr('comp_snpn');
+            
             if (comp_snpn) {
                 var tempInput = $('<input>');
                 $('body').append(tempInput);
                 tempInput.val(comp_snpn).select();
                 document.execCommand('copy');
                 tempInput.remove();
-
+                console.log(`Copied comp_snpn: ${comp_snpn}`);
             } else {
                 console.log('No comp_snpn attribute found.');
             }
-           
+        }
 
-        });
+
+    });
 
         // Enable the "Save Changes" button when form fields are changed
         $('#editForm input, #editForm select, #editForm textarea').on('input change', function() {
@@ -750,6 +824,62 @@ function setMode(mode) {
     }
 
     // RawFailures column handling ends
+
+    // Handle click on the result icon
+    $('#home_results_table').on('click', '.result-icon', function() {
+        var rescellSn = $(this).closest('td').attr('rescell_sn');
+
+        $.ajax({
+                url: '/get_logs_records',
+                method: 'GET',
+                data: {
+                    records_per_page: '10',
+                    serial: rescellSn
+                },
+                success: function(response) {
+                    hostFileModalTableBody.innerHTML='';
+                    if (Array.isArray(response.records)) {
+                    // Assuming response.records is an array of record objects
+                    response.records.forEach(function(record) {
+                        const encodedHostStatus = encodeURIComponent(JSON.stringify(record.host_status));
+                        const row = `<tr record_id="${record.id}" data-host-status="${encodedHostStatus}" data-file-name="${record.file_name}">
+                            <td>${record.id}</td>
+                            <td>${record.file_name}</td>   
+                        </tr>`;
+                        document.getElementById('hostFileModalTableBody').insertAdjacentHTML('beforeend', row);
+                    });
+                    
+                    // Add click event listener to each row
+                        const rows = hostFileModalTableBody.querySelectorAll('tr');
+                        rows.forEach(function(row) {
+                            row.addEventListener('click', function() {
+                                const fileName = row.getAttribute('data-file-name');
+                                const encodedHostStatus = row.getAttribute('data-host-status');
+                                const hostStatus = JSON.parse(decodeURIComponent(encodedHostStatus));
+       
+                                showHostStatusModal(fileName, hostStatus);
+                            });
+                        });
+
+                    
+                        $('#hostFileModal').modal('show');
+                    } else {
+                        console.error('Expected an array but got:', response.records);
+                    }
+                },
+                error: function(xhr, status, error) {
+                    console.error('AJAX error:', status, error);
+                }
+            });
+    
+  
+    });
+
+    function showHostStatusModal(fileName, hostStatus) {
+        document.getElementById('hostStatusModalLabel').innerText = fileName;
+        document.getElementById('hostStatusContent').value = hostStatus;
+        $('#hostStatusModal').modal('show'); 
+    }
 
     
 });  
