--- a/templates/logs.html
+++ b/templates/logs.html
@@ -14,19 +14,22 @@
     <div id="output" class="mt-3"></div>
 
     <div class="table-responsive">
+        <p class="lead">
+            Last 10 logs records processed:
+          </p>
         <table id="logs-table" class="table table-sm table-bordered">
             <thead>
                 <tr>
                     <th>ID</th>
                     <th>File</th>
-                    <th>Serial #</th>
-                    <th>Host Status</th>
+                    <!-- <th>Serial #</th> -->
+                    <!-- <th>Host Status</th> -->
                     <th>CSV File</th>
-                    <th>CSV File Contents</th>
+                    <!-- <th>CSV File Contents</th> -->
                 </tr>
             </thead>
             <tbody>
-                <!-- Rows will be populated by JavaScript -->
+                
             </tbody>
         </table>
     </div>
@@ -91,11 +94,8 @@
                         response.records.forEach(function(record) {
                             const row = `<tr record_id="${record.id}">
                                 <td>${record.id}</td>
-                                <td>${record.file_name}</td>
-                                <td>${record.serial_number}</td>
-                                <td class="host-status"><pre>${record.host_status}</pre></td>
+                                <td>${record.file_name}</td>   
                                 <td>${record.csv_file_name}</td>
-                                <td class="host-status"><pre>${record.csv_file_content}</pre></td>
                             </tr>`;
                             logsTableBody.append(row);
                         });
@@ -113,3 +113,11 @@
         fetchLogsRecords();
     });
     </script>
+
+<!-- 
+<td>${record.id}</td>
+<td>${record.file_name}</td>
+// <td>${record.serial_number}</td>
+// <td class="host-status"><pre>${record.host_status}</pre></td>
+<td>${record.csv_file_name}</td>
+// <td class="host-status"><pre>${record.csv_file_content}</pre></td> -->
