--- a/templates/logs.html
+++ b/templates/logs.html
@@ -8,9 +8,9 @@
             <option value="all-files">All files</option>
         </select>
     </div>
-    <div id="spinner" class="spinner-border text-primary hidden" role="status">
+    <!-- <div id="spinner" class="spinner-border text-primary hidden" role="status">
         <span class="sr-only">Loading...</span>
-    </div>
+    </div> -->
     <div id="output" class="mt-3"></div>
 
     <div class="table-responsive">
