worked on settings area
Needs fixing to is_admin update, maybe add the csfr setting for security

--- a/templates/home.html
+++ b/templates/home.html
@@ -878,7 +878,11 @@ function setMode(mode) {
     function showHostStatusModal(fileName, hostStatus) {
         document.getElementById('hostStatusModalLabel').innerText = fileName;
         document.getElementById('hostStatusContent').value = hostStatus;
-        $('#hostStatusModal').modal('show'); 
+        
+        $('#hostStatusModal').modal('show');
+        const hostStatusContent = document.getElementById('hostStatusContent');
+        hostStatusContent.scrollTop = hostStatusContent.scrollHeight;
+ 
     }
 
     
